--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "gsap": "^3.13.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "three": "^0.181.1",
     "vite-plugin-glsl": "^1.5.4"
   },
   "devDependencies": {
