--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gsap": "^3.13.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
     "three": "^0.181.1",
     "vite-plugin-glsl": "^1.5.4"
   },
